[gd_scene load_steps=3 format=3 uid="uid://qmyoe8q6c30b"]

[ext_resource type="Texture2D" uid="uid://g4x5vjxonalu" path="res://Menu/91689.jpg" id="1_23gn4"]
[ext_resource type="Script" path="res://h_slider.gd" id="2_5h2ah"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1157.0
offset_bottom = 646.0
texture = ExtResource("1_23gn4")
expand_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 417.0
offset_top = 118.0
offset_right = 740.0
offset_bottom = 235.0
theme_override_font_sizes/font_size = 32
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music Volume" type="Label" parent="."]
layout_mode = 0
offset_left = 421.0
offset_top = 182.0
offset_right = 744.0
offset_bottom = 299.0
text = "Music Volume
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 467.0
offset_top = 227.0
offset_right = 683.0
offset_bottom = 300.0
script = ExtResource("2_5h2ah")

[node name="SFX Volume" type="Label" parent="."]
layout_mode = 0
offset_left = 422.0
offset_top = 264.0
offset_right = 745.0
offset_bottom = 381.0
text = "SFX Volume
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider2" type="HSlider" parent="."]
layout_mode = 0
offset_left = 474.0
offset_top = 320.0
offset_right = 690.0
offset_bottom = 393.0

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 555.0
offset_top = 420.0
offset_right = 616.0
offset_bottom = 451.0
text = "Back
"

[node name="Volume1" type="Label" parent="."]
layout_mode = 0
offset_left = 550.0
offset_top = 275.0
offset_right = 613.0
offset_bottom = 313.0
text = "text"
horizontal_alignment = 1

[node name="Volume2" type="Label" parent="."]
layout_mode = 0
offset_left = 564.0
offset_top = 369.0
offset_right = 604.0
offset_bottom = 392.0
text = "text"
horizontal_alignment = 1

[connection signal="pressed" from="BackButton" to="HSlider" method="_on_return_pressed"]
